Game scroll bar fix
Fixei a scroll bar do jogo, falta a do som

--- a/Code/Css/main.css
+++ b/Code/Css/main.css
@@ -1,3 +1,16 @@
 head {
-    margin: 0;
+    margin: auto;
+    padding: 0px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+    height: 100%;
+}
+
+iframe{
+    margin: auto;
+    padding: 0;
 }
